# stellar-avoidance

./: LICENSE  README.md  pyproject.toml  verify_torlakcik.py
configs/: torlakcik_default.yaml
stellar_avoidance/: __init__.py  cli.py  config.py  criteria.py  export.py  loader.py  pipeline.py
tests/: conftest.py  test_avoidance.py  test_pipeline.py
